--- a/Aakar-Foundation.css
+++ b/Aakar-Foundation.css
@@ -386,4 +386,24 @@
     margin-left: initial;
     width: auto;
   }
+}.u-section-5 .u-sheet-1 {
+  min-height: 500px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 412px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 316px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 296px;
+  }
 }
