--- a/nicepage.css
+++ b/nicepage.css
@@ -32444,6 +32444,8 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 @media (max-width: 575px) {
   .u-header .u-image-1 {
+    width: auto;
+    height: auto;
     margin: 31px -6px 20px auto;
   }
 
